[gd_scene load_steps=14 format=2]

[ext_resource path="res://Props/Grass.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Enviroment/env_main_menu.tres" type="Environment" id=3]
[ext_resource path="res://Screens/MainMenu.gd" type="Script" id=4]
[ext_resource path="res://Assets/Fonts/font_main_menu_title.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Fonts/font_main_menu_buttons.tres" type="DynamicFont" id=6]
[ext_resource path="res://Screens/AboutScreen.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Audio/ui_click_light.ogg" type="AudioStream" id=9]
[ext_resource path="res://Screens/style_menu_button.tres" type="StyleBox" id=10]
[ext_resource path="res://Assets/Audio/ui_click.ogg" type="AudioStream" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Animation" id=2]
resource_name = "slide_in_about"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AboutScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1920, 0 ), Vector2( 1020, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "slide_out_about"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("AboutScreen:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1020, 0 ), Vector2( 1920, 0 ) ]
}

[node name="MainMenu" type="Spatial"]
script = ExtResource( 4 )

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeBackgroud" type="ColorRect" parent="UI"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0627451, 0.121569, 0.196078, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -540.0
margin_right = 509.0
margin_bottom = 540.0
custom_constants/margin_top = 130
custom_constants/margin_left = 180
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
margin_left = 180.0
margin_top = 130.0
margin_right = 509.0
margin_bottom = 1080.0
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer"]
margin_right = 329.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.976471, 0.380392, 0.286275, 1 )
text = "TATL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 141.0
margin_right = 329.0
margin_bottom = 231.0
custom_styles/separator = SubResource( 1 )
custom_constants/separation = 90

[node name="ButtonStartGame" type="Button" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 251.0
margin_right = 329.0
margin_bottom = 371.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_hover = Color( 0.976471, 0.380392, 0.286275, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.380392, 0.286275, 1 )
text = "Start Game"
flat = true
align = 0

[node name="ButtonAbout" type="Button" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 391.0
margin_right = 329.0
margin_bottom = 511.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_hover = Color( 0.976471, 0.380392, 0.286275, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.380392, 0.286275, 1 )
text = "About"
flat = true
align = 0

[node name="ButtonQuit" type="Button" parent="UI/MarginContainer/VBoxContainer"]
margin_top = 531.0
margin_right = 329.0
margin_bottom = 651.0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_hover = Color( 0.976471, 0.380392, 0.286275, 1 )
custom_colors/font_color_pressed = Color( 0.976471, 0.380392, 0.286275, 1 )
text = "Quit"
flat = true
align = 0

[node name="AboutScreen" parent="UI" instance=ExtResource( 7 )]
margin_left = 1920.0
margin_right = 2820.0

[node name="AboutAnimationPlayer" type="AnimationPlayer" parent="UI"]
anims/slide_in_about = SubResource( 2 )
anims/slide_out_about = SubResource( 3 )

[node name="HoverSound" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 9 )

[node name="ClickSound" type="AudioStreamPlayer" parent="UI"]
stream = ExtResource( 11 )

[node name="Player" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.1239, 2.01937, -6.37143 )
input_enabled = false

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.9242, 0.381909, 0, -0.381909, 0.9242, -1.47204, 1.83148, 4.29924 )
environment = ExtResource( 3 )
current = true
fov = 75.0
far = 25.0

[node name="Grass" type="Spatial" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Grass" parent="Grass" instance=ExtResource( 1 )]
grass_count = 250

[node name="Grass2" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0 )
grass_count = 250

[node name="Grass5" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 0 )
grass_count = 250

[node name="Grass3" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 0 )
grass_count = 250

[node name="Grass4" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
grass_count = 250

[node name="Grass6" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 10 )
grass_count = 250

[node name="Grass7" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 10 )
grass_count = 250

[node name="Grass8" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, 10 )
grass_count = 250

[node name="Grass9" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10 )
grass_count = 250

[node name="Grass10" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -10 )
grass_count = 250

[node name="Grass11" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -10 )
grass_count = 250

[node name="Grass12" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -10 )
grass_count = 250

[node name="Grass13" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
grass_count = 250

[node name="Grass14" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -20 )
grass_count = 250

[node name="Grass15" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -20 )
grass_count = 250

[node name="Grass16" parent="Grass" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10, 0, -20 )
grass_count = 250
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="gui_input" from="UI/FadeBackgroud" to="." method="_on_FadeBackgroud_gui_input"]
[connection signal="mouse_entered" from="UI/MarginContainer/VBoxContainer/ButtonStartGame" to="." method="_on_ButtonStartGame_mouse_entered"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/ButtonStartGame" to="." method="_on_ButtonStartGame_pressed"]
[connection signal="mouse_entered" from="UI/MarginContainer/VBoxContainer/ButtonAbout" to="." method="_on_ButtonAbout_mouse_entered"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/ButtonAbout" to="." method="_on_ButtonAbout_pressed"]
[connection signal="mouse_entered" from="UI/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_mouse_entered"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
